--- a/.htaccess
+++ b/.htaccess
@@ -4,4 +4,5 @@ RewriteBase /
 RewriteCond %{DOCUMENT_ROOT}/static%{REQUEST_URI} -f
 RewriteRule ^ static%{REQUEST_URI} [L]
 
+RewriteCond %{REQUEST_URI} !^/static/
 RewriteRule .*? index.php
